--- a/css/media.css
+++ b/css/media.css
@@ -170,6 +170,9 @@ margin-bottom: 15px;
 }
 }
 @media (max-width: 767px) {
+    body.lock{
+        overflow: hidden;
+    }
 .container{
 max-width: none;
 }
@@ -177,8 +180,104 @@ header .container img{
 padding-left: 10px;
 }
 header .container nav{
-display: none;
+position: fixed;
+top: -100%;
+width: 100%;
+transition: 0.5s ease-in-out;
 }
+header .container nav ul{
+    display: block;
+    text-align: center;
+}
+header .container nav ul li{
+    margin-right: 0;
+    margin-bottom: 30px;
+}
+header .container nav ul li a{
+    font-size: 22px;
+}
+header .container nav ul li:first-child a{
+    font-size: 22px;
+}
+header .container nav ul li:last-child a {
+    text-decoration: none; 
+    color: #6E5F5F;
+    font-size: 22px;
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 24px;
+    background-color: inherit;
+    padding: 0 0 0 0;
+}
+header .container nav.active{
+top: 0;
+padding: 120px 0 0 0;
+height: 100%;
+width: 100%;
+background-color: #cadff2;
+z-index: 2;
+}
+header .container .header_logo{
+    position: relative;
+    z-index: 3;
+}
+header .container .header_burger{
+    width: 30px;
+    height: 20px;
+    display: block;
+    position: relative;
+    z-index: 3;
+    
+}
+header .container .header_burger span{
+    position: absolute;
+    top: 9px;
+    width: 100%;
+    height: 2px;
+    position: absolute;
+    background-color: #40A3F8;
+}
+header .container .header_burger::before,
+header .container .header_burger::after{
+    content: "";
+    width: 100%;
+    height: 2px;
+    position: absolute;
+    background-color: #40A3F8;
+    transition: 0.3s ease-in-out;
+}
+header .container .header_burger::before{
+    top: 0;
+}
+header .container .header_burger::after{
+    bottom: 0;
+}
+header .container .header_burger.active::before{
+    top: 9px;
+    transform: rotate(45deg);
+}
+header .container .header_burger.active::after{
+    bottom: 9px;
+    transform: rotate(-45deg);
+}
+header .container .header_burger.active span{
+    transform: scale(0);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 .main_banner .container .find_doctor{
     margin-bottom: 30px;
 }
